--- a/lib/scrollbar.css
+++ b/lib/scrollbar.css
@@ -71,6 +71,11 @@
   display: table;
 }
 
+.simplebar-content {
+  display: flex;
+  flex-direction: column;
+}
+
 .simplebar-placeholder {
   max-height: 100%;
   max-width: 100%;
